src/objects/Download_Product__c.object
<CustomObject>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <label>Download Product</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Download Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Download Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>